{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 222,
  "lineage": "58eca91e-d47d-6726-cc38-2c8c856978ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:loadbalancer/app/test-lb-tf/63def2380e8d9612",
            "arn_suffix": "app/test-lb-tf/63def2380e8d9612",
            "dns_name": "test-lb-tf-1656534172.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:loadbalancer/app/test-lb-tf/63def2380e8d9612",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-063e0aa36e918ac05"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-4efd1426"
              },
              {
                "subnet_id": "subnet-613b3b1a"
              },
              {
                "subnet_id": "subnet-c6297c8b"
              }
            ],
            "subnets": [
              "subnet-4efd1426",
              "subnet-613b3b1a",
              "subnet-c6297c8b"
            ],
            "vpc_id": "vpc-5e8e4c36",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:353476757090:subnet/subnet-4efd1426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "172.31.0.0/20",
            "id": "subnet-4efd1426",
            "map_public_ip_on_launch": true,
            "owner_id": "353476757090",
            "vpc_id": "vpc-5e8e4c36"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:353476757090:subnet/subnet-613b3b1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-613b3b1a",
            "map_public_ip_on_launch": true,
            "owner_id": "353476757090",
            "vpc_id": "vpc-5e8e4c36"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:353476757090:subnet/subnet-c6297c8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-c6297c8b",
            "map_public_ip_on_launch": true,
            "owner_id": "353476757090",
            "vpc_id": "vpc-5e8e4c36"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:353476757090:vpc/vpc-5e8e4c36",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-a60cd8ce",
            "default_route_table_id": "rtb-0a1ecd62",
            "default_security_group_id": "sg-7620c810",
            "dhcp_options_id": "dopt-b8c10ad0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-5e8e4c36",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a1ecd62",
            "owner_id": "353476757090"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:listener/app/test-lb-tf/63def2380e8d9612/d09fcfae8866aa90",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:targetgroup/target-group/877a475ff498bdaa",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:listener/app/test-lb-tf/63def2380e8d9612/d09fcfae8866aa90",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:loadbalancer/app/test-lb-tf/63def2380e8d9612",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_subnet.default_subnet_a",
            "aws_default_subnet.default_subnet_b",
            "aws_default_subnet.default_subnet_c",
            "aws_default_vpc.default_vpc",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_alb.application_load_balancer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:targetgroup/target-group/877a475ff498bdaa",
            "arn_suffix": "targetgroup/target-group/877a475ff498bdaa",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:353476757090:targetgroup/target-group/877a475ff498bdaa",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-5e8e4c36"
          },
          "dependencies": [
            "aws_default_vpc.default_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:353476757090:security-group/sg-063e0aa36e918ac05",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063e0aa36e918ac05",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20210606143109612600000001",
            "name_prefix": null,
            "owner_id": "353476757090",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-5e8e4c36"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:353476757090:security-group/sg-094580afd8e92b8fe",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094580afd8e92b8fe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-063e0aa36e918ac05"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20210606144540986500000001",
            "name_prefix": null,
            "owner_id": "353476757090",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-5e8e4c36"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group"
          ]
        }
      ]
    }
  ]
}